--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,8 @@ name = "pypi"
 kwiiyatta = {editable = true, path = "."}
 
 [dev-packages]
+"flake8" = "*"
+"flake8-import-order" = "*"
 
 [requires]
 python_version = "3.6"
