--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,3 @@
 [flake8]
 application_import_names = kwiiyatta,tests
-exclude = .git,__pycache__,build,dist,.venv
+exclude = .git,__pycache__,build,dist,.venv,kwiiyatta/view/qt/ui
