--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ kwiiyatta = {editable = true, path = "."}
 "flake8" = "*"
 "flake8-import-order" = "*"
 pytest = "*"
+pytest-check = "*"
 
 [requires]
 python_version = "3.6"
